--- a/web/src/app/importexport/component/category-mapping-browser/category-mapping-browser.component.html
+++ b/web/src/app/importexport/component/category-mapping-browser/category-mapping-browser.component.html
@@ -39,6 +39,6 @@
   </mat-action-list>
 </mat-card>
 
-<button class="fab" mat-fab (click)="add()">
-  <mat-icon>add</mat-icon>
-</button>
+<fab-group>
+  <button mat-fab (click)="add()"><mat-icon>add</mat-icon></button>
+</fab-group>
