--- a/web/src/app/importexport/component/operation-revise-view/operation-revise-view.component.html
+++ b/web/src/app/importexport/component/operation-revise-view/operation-revise-view.component.html
@@ -97,10 +97,10 @@
     </mat-list>
   </mat-card>
 
-  <div class="fab">
+  <fab-group>
     <button mat-mini-fab (click)="toggleDateVisibility()"><mat-icon>visibility</mat-icon></button>
     <button mat-fab (click)="addOperation()"><mat-icon>add</mat-icon></button>
-  </div>
+  </fab-group>
 
 </div>
 
