--- a/web/src/app/common/component/currency-select/currency-select.component.html
+++ b/web/src/app/common/component/currency-select/currency-select.component.html
@@ -2,8 +2,11 @@
                 [currency]="currency"
                 [full]="true"
                 (click)="showCurrencySelect()"></currency-label>
-<entry-select [nullable]="true" (select)="select($event)">
-  <entry-item *ngFor="let currency of currencyService.currencies" [value]="currency">
-    <currency-label [currency]="currency.name" [full]="true"></currency-label>
-  </entry-item>
+<entry-select>
+  <entry-item (select)="select(null)">Nothing</entry-item>
+  @for (currency of currencyService.currencies; track currency.id) {
+    <entry-item (select)="select(currency)">
+      <currency-label [currency]="currency.name" [full]="true"></currency-label>
+    </entry-item>
+  }
 </entry-select>
