--- a/web/src/app/entity/component/entity-editor/entity-editor.component.scss
+++ b/web/src/app/entity/component/entity-editor/entity-editor.component.scss
@@ -1,8 +1,12 @@
+:host {
+  display: grid;
+  margin: 20px;
+}
+
 form {
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  gap: 10px;
+  //gap: 10px;
 }
 
 .toggle {
