--- a/web/src/app/operation/component/operation-browser/operation-browser.component.scss
+++ b/web/src/app/operation/component/operation-browser/operation-browser.component.scss
@@ -1,11 +1,9 @@
 :host {
   display: grid;
-  grid-gap: 1em;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
+.common-layout {
+  grid-template-rows: 1fr min-content;
 }
 
 .row {
