--- a/web/src/app/entity/component/entity-filter-expression/entity-filter-expression.component.html
+++ b/web/src/app/entity/component/entity-filter-expression/entity-filter-expression.component.html
@@ -13,11 +13,13 @@
     <mat-form-field>
       <mat-label>Operator</mat-label>
       <mat-select [(ngModel)]="expression.operator">
-        @for (operator of getOperators(expression.field.type); track operator.operator) {
-          <mat-option [value]="operator.operator">{{operator.label}}</mat-option>
+        @for (operator of getOperators(expression.field.type); track operator) {
+          <mat-option [value]="operator">{{OPERATOR_LABELS[operator]}}</mat-option>
         }
       </mat-select>
     </mat-form-field>
+  } @else {
+    <div></div>
   }
 
   @if (isValueInputVisible()) {
@@ -72,6 +74,8 @@
 
     </mat-form-field>
 
+  } @else {
+    <div></div>
   }
 
 </div>
