--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -13,6 +13,8 @@
     <mat-nav-list>
       <a mat-list-item [routerLink]="['dashboard']" (click)="left.close()">Dashboard</a>
       <mat-divider></mat-divider>
+      <a mat-list-item [routerLink]="['candy']" (click)="left.close()">Candy</a>
+      <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['currency']" (click)="left.close()">Currency</a>
       <a mat-list-item [routerLink]="['account']" (click)="left.close()">Account</a>
       <a mat-list-item [routerLink]="['operation']" (click)="left.close()">Operation</a>
