--- a/web/src/app/candy/component/candy-dashboard/candy-dashboard.component.scss
+++ b/web/src/app/candy/component/candy-dashboard/candy-dashboard.component.scss
@@ -1,14 +1,8 @@
-:host {
-  display: grid;
-  background-color: gray;
-}
-
 common-layout {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin: 20px;
 }
 
 .balance {
@@ -24,12 +18,13 @@ common-layout {
 
   .amount {
     display: flex;
-    width: 20vw;
+    width: min(20vw, 150px);
     flex-direction: column;
   }
 
   .comment {
-    flex-grow: 1;
-    text-align: end;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: min(100px, 20vw);
   }
 }
