--- a/web/src/app/operation/component/operation-editor/operation-editor.component.html
+++ b/web/src/app/operation/component/operation-editor/operation-editor.component.html
@@ -1,4 +1,4 @@
-<common-layout>
+<common-layout [form]="true">
   <toolbar-content>
     <toolbar-button name="Save" icon="done" (click)="save()"></toolbar-button>
     <toolbar-button name="Close" icon="close" (click)="close()"></toolbar-button>
