Implemented pricing registration

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -14,6 +14,7 @@
       <a mat-list-item [routerLink]="['dashboard']" (click)="left.close()">Dashboard</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['candy']" (click)="left.close()">Candy</a>
+      <a mat-list-item [routerLink]="['pricing']" (click)="left.close()">Pricing</a>
       <mat-divider></mat-divider>
       <a mat-list-item [routerLink]="['currency']" (click)="left.close()">Currency</a>
       <a mat-list-item [routerLink]="['account']" (click)="left.close()">Account</a>
