--- a/web/src/app/report/component/dashboard/dashboard.component.html
+++ b/web/src/app/report/component/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<common-layout [form]="true">
+<common-layout [form]="true" [background]="'gray'">
 
   @if (dashboard) {
     <mat-card class="cash">
