--- a/web/src/app/operation/component/operation-view/operation-view.component.html
+++ b/web/src/app/operation/component/operation-view/operation-view.component.html
@@ -10,7 +10,7 @@
   <mat-form-field>
     <mat-label>Date</mat-label>
     <input [(ngModel)]="_operation.date" matInput [matDatepicker]="picker" readonly (click)="picker.open()">
-    <mat-datepicker touchUi #picker></mat-datepicker>
+    <mat-datepicker [touchUi]="true" #picker></mat-datepicker>
   </mat-form-field>
 
   <ng-container *ngIf="_operation.type == 'EXCHANGE'">
