--- a/web/src/app/entity/component/entity-filter/entity-filter.component.scss
+++ b/web/src/app/entity/component/entity-filter/entity-filter.component.scss
@@ -1,26 +1,32 @@
 .content {
   max-height: 100vh;
   height: 100%;
-}
-
-.filter-node {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
+  padding: 10px !important;
 }
 
 .filler {
   flex-grow: 1;
 }
 
-.filter-tree .mat-nested-tree-node div[role=group] {
-  padding-left: 40px;
+.header {
+  display: flex;
+  gap: 10px;
+  align-items: flex-end;
 }
 
-.filter-tree div[role=group] > .filter-node {
-  padding-left: 40px;
-}
+.item {
+  padding: 5px 0;
+  height: auto !important;
 
-.negate {
-  margin-right: 10px;
+  .negate {
+    margin: 0 0 0 10px;
+  }
+
+  .line {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 5px;
+    min-height: 48px;
+  }
 }
